<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:orientation="vertical" >

    <!-- 登陆界面 -->

    <LinearLayout
        android:id="@+id/login_imback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:src="@drawable/login_back" />
    </LinearLayout>
	<TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#0000EE" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv1"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/login_tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_tv2"
                    android:textColor="#ffffff"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:background="#0000EE" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/login_ground"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/login_zh" />

                <EditText
                    android:id="@+id/login_et_zh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:autoText="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/login_etground"
                    android:hint="@string/login_tv3"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="17sp">

                    <requestFocus android:layout_width="match_parent" />

                </EditText>
            </LinearLayout>

            <TextView style="@style/text_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/login_mimi" />

                <EditText
                    android:id="@+id/login_et_mimi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:background="@drawable/login_etground"
                    android:hint="@string/login_tv4"
                    android:layout_marginRight="5dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="17sp" >

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/login_im_login"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/login" />

        <LinearLayout
            android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/login_tv_wang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv5"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>